--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile files('libs/AMap_3DMap_V3.3.2_20160525.jar')
     compile files('libs/AMap_Location_V2.5.0_20160526.jar')
+    compile files('libs/AMap_Search_V3.3.0_20160616.jar')
 }
